--- a/package.json
+++ b/package.json
@@ -9,15 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.12",
+    "@google/genai": "^0.7.0",
+    "@langchain/community": "^0.3.38",
+    "@langchain/core": "^0.3.43",
+    "@neondatabase/serverless": "^1.0.0",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@uploadthing/react": "^7.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "langchain": "^0.3.19",
     "lucide-react": "^0.485.0",
+    "motion": "^12.6.3",
     "next": "15.2.4",
+    "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "uploadthing": "^7.6.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -27,7 +42,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9.23.0",
     "eslint-config-next": "15.2.4",
-    "eslint-plugin-tailwindcss": "^3.18.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
